--- a/project/templates/users/register.html
+++ b/project/templates/users/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Регистрация{% endblock %}
+{% block title %}регистрация{% endblock %}
 
 {% block content %}
     <h1>Регистрация</h1>
