--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Мой магазин{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
-
-    {# 👇 Вставляем блок для дополнительных стилей #}
     {% block styles %}{% endblock %}
 </head>
 <body>
@@ -18,6 +16,10 @@
                 <li><a href="{% url 'register' %}">Регистрация</a></li>
                 <li><a href="{% url 'login' %}">Вход</a></li>
                 {% if user.is_authenticated %}
+                    <li><a href="{% url 'me' %}" class="profile-link">
+                        <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Профиль" class="profile-icon">
+                        {{ user.username }}
+                    </a></li>
                     <li><a href="{% url 'logout' %}">Выход</a></li>
                 {% endif %}
             </ul>
