--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -12,15 +12,14 @@
     <header>
         <nav>
             <ul>
-                <li><a href="{% url 'products' %}">Главная</a></li>
-                <li><a href="{% url 'register' %}">Регистрация</a></li>
-                <li><a href="{% url 'login' %}">Вход</a></li>
                 {% if user.is_authenticated %}
-                    <li><a href="{% url 'me' %}" class="profile-link">
-                        <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Профиль" class="profile-icon">
-                        {{ user.username }}
-                    </a></li>
+                    <li><a href="{% url 'products' %}">Главная</a></li>
                     <li><a href="{% url 'logout' %}">Выход</a></li>
+                    <li><a href="{% url 'me' %}" class="profile-link">{{ user.username }}</a></li>
+                {% else %}
+                    <li><a href="{% url 'products' %}">Главная</a></li>
+                    <li><a href="{% url 'register' %}">Регистрация</a></li>
+                    <li><a href="{% url 'login' %}">Вход</a></li>
                 {% endif %}
             </ul>
         </nav>
