--- a/project/templates/products/products.html
+++ b/project/templates/products/products.html
@@ -20,7 +20,7 @@
                 {% endif %}
                 <h2 class="product-name">{{ product.name }}</h2>
                 <p class="product-price">{{ product.price|floatformat:2 }} ₽</p>
-                {# <a href="{% url 'product_detail' product.id %}" class="view-details">Подробнее</a> #}
+                <a href="{% url 'product_detail' product.slug %}" class="view-details">Подробнее</a>
             </div>
         {% endfor %}
     </div>
