--- a/project/templates/users/profile.html
+++ b/project/templates/users/profile.html
@@ -1,21 +1,35 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}Мой профиль{% endblock %}
-{% block styles %}
-<link rel="stylesheet" href="{% static 'css/profile.css' %}">
-{% endblock %}
-{% block content %}
-<div class="profile-container">
-    <h1>Личный кабинет</h1>
+{% block title %}Профиль{% endblock %}
 
-    <div class="profile-card">
-        <div class="profile-info">
+
+{% block content %}
+    <div class="profile-container">
+        <h1>Мой профиль</h1>
+
+        <div class="user-info">
+            <h2>Информация о пользователе</h2>
             <p><strong>Имя пользователя:</strong> {{ user.username }}</p>
             <p><strong>Email:</strong> {{ user.email }}</p>
-            <p><strong>Дата регистрации:</strong> {{ user.date_joined|date:"d.m.Y" }}</p>
+            <p><strong>Номер телефона:</strong> {{ user_profile.phone }}</p>
         </div>
-    </div>
 
-    <a href="#" class="edit-btn">Редактировать профиль</a>
-</div>
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <input type="hidden" name="form_type" value="user_form">
+            {{ user_form.as_p }}
+            <button type="submit" class="btn btn-primary">Сохранить изменения</button>
+        </form>
+
+        <form method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            <input type="hidden" name="form_type" value="phone_form">
+            {{ phone_form.as_p }}
+            <button type="submit" class="btn btn-primary">Сохранить номер</button>
+        </form>
+    </div>
 {% endblock %}
+
+{% block styles %}
+    <link rel="stylesheet" href="{% static 'css/profile.css' %}">
+{% endblock %}}
