--- a/project/templates/users/register.html
+++ b/project/templates/users/register.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block title %}регистрация{% endblock %}
+{% block title %}Registration{% endblock %}
 
 {% block content %}
-    <h1>Регистрация</h1>
+    <h1>Registration</h1>
 
     <form method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Зарегистрироваться</button>
+        <button type="submit">Register</button>
     </form>
 {% endblock %}
 
