--- a/project/templates/products/products.html
+++ b/project/templates/products/products.html
@@ -18,7 +18,7 @@
                 {% else %}
                     <img src="/media/products/images/default.jpg" alt="{{ product.name }}" class="product-image">
                 {% endif %}
-                <h2 class="product-name">{{ product.name }}</h2>
+                    <h2 class="product-name">{{ product.name|slice:":20" }}{% if product.name|length > 20 %}...{% endif %}</h2>
                 <p class="product-price">{{ product.price|floatformat:2 }} ₽</p>
                 <a href="{% url 'product_detail' product.slug %}" class="view-details">Подробнее</a>
             </div>
