--- a/project/templates/users/profile.html
+++ b/project/templates/users/profile.html
@@ -11,6 +11,7 @@
             <h2>Информация о пользователе</h2>
             <p><strong>Имя пользователя:</strong> {{ user.username }}</p>
             <p><strong>Email:</strong> {{ user.email }}</p>
+            <p><strong>Role:</strong> {{ user.profile.role }}</p>
             <p><strong>Номер телефона:</strong> {{ user_profile.phone }}</p>
         </div>
 
