--- a/project/templates/shops/shop_detail.html
+++ b/project/templates/shops/shop_detail.html
@@ -33,7 +33,15 @@
         </div>
     </div>
 
-    <h2>Товары магазина</h2>
+    <div class="products-header">
+        <h2>Товары магазина</h2>
+        {% if user.is_authenticated and user == shop.owner %}
+            <a href="{% url 'create_product' %}?shop={{ shop.slug }}" class="btn-add-product">
+                ➕ Добавить товар
+            </a>
+        {% endif %}
+    </div>
+
     {% if products %}
         <div class="product-grid">
             {% for product in products %}
