--- a/project/templates/products/products.html
+++ b/project/templates/products/products.html
@@ -14,7 +14,7 @@
         {% for product in products %}
             <div class="product-card">
                 {% if product.image %}
-                    <img src="{{ product.image.url }}" alt="{{ product.name }}" class="product-image">
+                    <img src="{{ product.image.url }}" alt="{{ product.name }}" class="product-image" onerror="this.onerror=null; this.src='{% static '/images/default-preview.jpg' %}'">
                 {% else %}
                     <img src="/media/products/images/default.jpg" alt="{{ product.name }}" class="product-image">
                 {% endif %}
