'Мои заказы' button was added

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -18,8 +18,10 @@
                         <li><a href="{% url 'my-shops' %}">Мои магазины</a></li>
                     {% elif userprofile.role == 'pp_staff' %}
                         <li><a href="{% url 'my-pp' %}">Мой ПВЗ</a></li>
+                    {% else %}
+                        <li><a href="{% url 'my-orders' %}">Мои заказы</a></li>
+                        <li><a href="{% url 'cart' %}">Корзина</a></li>
                     {% endif %}
-                    <li><a href="{% url 'cart' %}">Корзина</a></li>
                     <li><a href="{% url 'me' %}" class="profile-link">{{ user.username }}</a></li>
                     <li><a href="{% url 'logout' %}">Выход</a></li>
                 {% else %}
