button styles (color changing)

--- a/project/static/css/product_detail.css
+++ b/project/static/css/product_detail.css
@@ -81,7 +81,8 @@
 }
 
 .add-to-cart-btn:hover {
-    background-color: #007BFF;
+    background-color: #218838;
+    transform: translateY(-1px);
 }
 
 #cart-message {
